# Abilgram

./: .env  .flake8  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  endpoints.py  ioc.py  main.py  models.py  repositories.py  schemas.py  security.py  services.py  socket_io.py  test.html  test.py  typesense_conf.py  ws_routes.py
backend/app/application/: endpoints.py  main.py
backend/app/core/: config.py  database.py  di.py  typesense_conf.py
backend/app/infrastructure/: ws_routes.py
backend/typesense-data/db/: 000075.sst  IDENTITY  LOG  MANIFEST-000076
backend/typesense-data/meta/: IDENTITY  LOG  LOG.old.1731233775039679  LOG.old.1731233937110224  LOG.old.1731234002246141  LOG.old.1731234447026071  LOG.old.1731234733314194  LOG.old.1731235204844360  LOG.old.1731235340631979  LOG.old.1731235453948956  LOG.old.1731235642979565  LOG.old.1731235725660874  LOG.old.1731235922361535  LOG.old.1731236784428515  LOG.old.1731236910622767  LOG.old.1731240372301459  LOG.old.1731240486484506  LOG.old.1731240635392577  LOG.old.1731240978864956  LOG.old.1731241135965410  LOG.old.1731241325260861  LOG.old.1731242483955541  LOG.old.1731243288727053  LOG.old.1731245513446403  LOG.old.1731245763955131  LOG.old.1731245865117620  LOG.old.1731246003571556  LOG.old.1731246453420634  LOG.old.1731247225942116  LOG.old.1731248323773243  LOG.old.1731248730264710  LOG.old.1731249147207679  LOG.old.1731249279729871  LOG.old.1731249611249192  LOG.old.1731249736389524  LOG.old.1731250211023496  LOG.old.1731250424834394  (+92 more)
(+68 files in other folders)
